infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: auth-mongo-db
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo-db
  template:
    metadata:
      labels:
        app: auth-mongo-db
    spec:
      containers:
        - name: mongo-db 
          image: mongo
---
apiVersion: v1 
kind: Service 
metadata:
  name: auth-mongo-srv 
spec:
  selector: 
    app: auth-mongo-db
  ports:
    - name: mongo-db
      protocol: TCP 
      port: 27017
      targetPort: 27017
