infra/k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
